--- a/dev/user_guide/index.html
+++ b/dev/user_guide/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>HyperSpy User Guide (DRAFT) &mdash; HyperSpy 0.7.3 documentation</title>
+    <title>HyperSpy User Guide (DRAFT) &mdash; HyperSpy 0.8+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.7.3',
+        VERSION:     '0.8+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.7.3 documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.8+dev documentation" href="../index.html" />
     <link rel="next" title="Introduction" href="intro.html" />
     <link rel="prev" title="Welcome to HyperSpy’s documentation!" href="../index.html" />
  
@@ -64,7 +64,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to HyperSpy’s documentation!"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7.3 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -275,7 +275,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to HyperSpy’s documentation!"
              >previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7.3 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
