--- a/dev/user_guide/what_is_new.html
+++ b/dev/user_guide/what_is_new.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>What’s new &mdash; HyperSpy 0.7.3 documentation</title>
+    <title>What’s new &mdash; HyperSpy 0.8+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.7.3',
+        VERSION:     '0.8+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.7.3 documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.8+dev documentation" href="../index.html" />
     <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Installing HyperSpy" href="install.html" />
     <link rel="prev" title="Introduction" href="intro.html" />
@@ -65,7 +65,7 @@
         <li class="right" >
           <a href="intro.html" title="Introduction"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7.3 documentation</a> &raquo;</li>
+        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -725,7 +725,7 @@ Orsay VG parameters.</li>
         <li class="right" >
           <a href="intro.html" title="Introduction"
              >previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7.3 documentation</a> &raquo;</li>
+        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li>
           <li><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
