Updated doc release: dev

--- a/dev/citing.html
+++ b/dev/citing.html
@@ -97,7 +97,7 @@ url          = {http://dx.doi.org/10.5281/zenodo.16850}
 </pre></div>
 </div>
 <p>or click on the DOI badge below for more citation formats.</p>
-<img alt="https://zenodo.org/badge/doi/10.5281/zenodo.16850.svg:target:http://dx.doi.org/10.5281/zenodo.16850" src="https://zenodo.org/badge/doi/10.5281/zenodo.16850.svg:target:http://dx.doi.org/10.5281/zenodo.16850" />
+<a class="reference external image-reference" href="http://dx.doi.org/10.5281/zenodo.16850"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.16850.svg" /></a>
 </div>
 
 
