--- a/dev/examples/simple_simulations/two_gaussians.html
+++ b/dev/examples/simple_simulations/two_gaussians.html
@@ -71,18 +71,21 @@
 <span class="sd">simulated hyperspectrum.</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">hyperspy.api</span> <span class="kn">as</span> <span class="nn">hs</span>
+<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="kn">as</span> <span class="nn">plt</span>
 
 
 <span class="c"># Create an empty spectrum</span>
-<span class="n">s</span> <span class="o">=</span> <span class="n">signals</span><span class="o">.</span><span class="n">Spectrum</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">((</span><span class="mi">32</span><span class="p">,</span> <span class="mi">32</span><span class="p">,</span> <span class="mi">1024</span><span class="p">)))</span>
+<span class="n">s</span> <span class="o">=</span> <span class="n">hs</span><span class="o">.</span><span class="n">signals</span><span class="o">.</span><span class="n">Spectrum</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">((</span><span class="mi">32</span><span class="p">,</span> <span class="mi">32</span><span class="p">,</span> <span class="mi">1024</span><span class="p">)))</span>
 
 <span class="c"># Generate some simple data: two Gaussians with random centers and area</span>
 
 <span class="c"># First we create a model</span>
-<span class="n">m</span> <span class="o">=</span> <span class="n">create_model</span><span class="p">(</span><span class="n">s</span><span class="p">)</span>
+<span class="n">m</span> <span class="o">=</span> <span class="n">s</span><span class="o">.</span><span class="n">create_model</span><span class="p">()</span>
 
 <span class="c"># Define the first gaussian</span>
-<span class="n">gs1</span> <span class="o">=</span> <span class="n">components</span><span class="o">.</span><span class="n">Gaussian</span><span class="p">()</span>
+<span class="n">gs1</span> <span class="o">=</span> <span class="n">hs</span><span class="o">.</span><span class="n">model</span><span class="o">.</span><span class="n">components</span><span class="o">.</span><span class="n">Gaussian</span><span class="p">()</span>
 <span class="c"># Add it to the model</span>
 <span class="n">m</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">gs1</span><span class="p">)</span>
 
@@ -97,7 +100,7 @@
 <span class="n">gs1</span><span class="o">.</span><span class="n">A</span><span class="o">.</span><span class="n">map</span><span class="p">[</span><span class="s">&#39;is_set&#39;</span><span class="p">][:]</span> <span class="o">=</span> <span class="bp">True</span>
 
 <span class="c"># Second gaussian</span>
-<span class="n">gs2</span> <span class="o">=</span> <span class="n">components</span><span class="o">.</span><span class="n">Gaussian</span><span class="p">()</span>
+<span class="n">gs2</span> <span class="o">=</span> <span class="n">hs</span><span class="o">.</span><span class="n">model</span><span class="o">.</span><span class="n">components</span><span class="o">.</span><span class="n">Gaussian</span><span class="p">()</span>
 <span class="c"># Add it to the model</span>
 <span class="n">m</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">gs2</span><span class="p">)</span>
 
@@ -122,7 +125,7 @@
 <span class="c"># Plot the result</span>
 <span class="n">s_model</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
 
-<span class="n">show</span><span class="p">()</span>
+<span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
 </pre></div>
 </div>
 <p>Keywords: hyperspy, example, codex (see <span class="xref std std-ref">how-to-search-examples</span>)</p>
