--- a/dev/examples/index.html
+++ b/dev/examples/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>HyperSpy Examples &mdash; HyperSpy 0.8.x+dev documentation</title>
+    <title>HyperSpy Examples &mdash; HyperSpy 0.8.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.8.x+dev',
+        VERSION:     '0.8.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.8.x+dev documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.8.1 documentation" href="../index.html" />
  
 <script type="text/javascript">
 
@@ -53,7 +53,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.x+dev documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -68,7 +68,7 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.8.x+dev</td>
+<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.8.1</td>
 </tr>
 <tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">August 10, 2015</td>
 </tr>
@@ -142,7 +142,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.x+dev documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
