--- a/dev/user_guide/getting_started.html
+++ b/dev/user_guide/getting_started.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Getting started &mdash; HyperSpy 0.8.x+dev documentation</title>
+    <title>Getting started &mdash; HyperSpy 0.8.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.8.x+dev',
+        VERSION:     '0.8.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.8.x+dev documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.8.1 documentation" href="../index.html" />
     <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Tools: the Signal class" href="tools.html" />
     <link rel="prev" title="Installing HyperSpy" href="install.html" />
@@ -62,7 +62,7 @@
         <li class="right" >
           <a href="install.html" title="Installing HyperSpy"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.x+dev documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.1 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -598,7 +598,7 @@ calling the <code class="xref py py-meth docutils literal"><span class="pre">gui
         <li class="right" >
           <a href="install.html" title="Installing HyperSpy"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.x+dev documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.1 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
