Updated doc release: dev

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -8044,6 +8044,10 @@
   </dt>
 
       
+  <dt><a href="api/hyperspy.tests.io.html#hyperspy.tests.io.test_hdf5.TestSavingMetadataContainers.test_save_unicode">test_save_unicode() (hyperspy.tests.io.test_hdf5.TestSavingMetadataContainers method)</a>
+  </dt>
+
+      
   <dt><a href="api/hyperspy.tests.signal.html#hyperspy.tests.signal.test_1D_tools.TestSmoothing.test_savgol">test_savgol() (hyperspy.tests.signal.test_1D_tools.TestSmoothing method)</a>
   </dt>
 
