--- a/dev/user_guide/getting_started.html
+++ b/dev/user_guide/getting_started.html
@@ -792,7 +792,7 @@ calling the <code class="xref py py-meth docutils literal"><span class="pre">gui
 <p>This command should raise the Preferences user interface:</p>
 <div class="figure align-center" id="id8">
 <span id="preferences-image"></span><img alt="../_images/preferences.png" src="../_images/preferences.png" />
-<p class="caption"><span class="caption-text">Preferences user interface</span></p>
+<p class="caption"><span class="caption-text">Preferences user interface.</span></p>
 </div>
 </div>
 </div>
