--- a/dev/user_guide/spectrum.html
+++ b/dev/user_guide/spectrum.html
@@ -466,7 +466,7 @@ passed) can perform data smoothing with different algorithms:</p>
 interface to remove spikes from spectra.</p>
 <div class="figure align-center" id="id1">
 <a class="reference internal image-reference" href="../_images/spikes_removal_tool.png"><img alt="../_images/spikes_removal_tool.png" src="../_images/spikes_removal_tool.png" style="width: 500px;" /></a>
-<p class="caption"><span class="caption-text">Spikes removal tool</span></p>
+<p class="caption"><span class="caption-text">Spikes removal tool.</span></p>
 </div>
 </div>
 <div class="section" id="other-methods">
