--- a/current/citing.html
+++ b/current/citing.html
@@ -172,7 +172,7 @@ entry</p>
                   Gaël Donval and
                   Ben Martineau and
                   Luiz Fernando Zagonel and
-                  Petras and
+                  Petras Jokubauskas and
                   Thomas Aarholt and
                   and Andreas Garmannslund and
                   Ilya Iyengar and
