Hyperlink DOIs against preferred resolver

--- a/v0.8/user_guide/bibliography.html
+++ b/v0.8/user_guide/bibliography.html
@@ -580,7 +580,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>2008</td>
 	<td>Ultramicroscopy<br/>Vol. 109(1), pp. 32-38&nbsp;</td>
 	<td>article</td>
-	<td><a href="http://dx.doi.org/10.1016/j.ultramic.2008.07.005">DOI</a> <a href="http://www.sciencedirect.com/science/article/B6TW1-4T2S8W3-1/2/acb6eef10200d49c99310f24108313b7">URL</a>&nbsp;</td>
+	<td><a href="https://doi.org/10.1016/j.ultramic.2008.07.005">DOI</a> <a href="http://www.sciencedirect.com/science/article/B6TW1-4T2S8W3-1/2/acb6eef10200d49c99310f24108313b7">URL</a>&nbsp;</td>
 </tr>
 <tr id="abs_arenal_extending_2008" class="abstract noshow">
 	<td colspan="6"><b>Abstract</b>: Multiple least squares fitting has been employed for long time in elemental electron energy-loss spectroscopy (EELS) analysis, in particular in biology, but with the hypothesis of a rather stable shape for the used core-loss signals. In the present case, we explore its use for identifying the variations in the edges' fine structures in complex boron nitride samples and in particular for mapping the bonding types of boron in such samples. Details about this improved procedure applied to data acquired in the spectrum-imaging mode are reported here.</td>
@@ -597,7 +597,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
   number = {1},
   pages = {32--38},
   url = {http://www.sciencedirect.com/science/article/B6TW1-4T2S8W3-1/2/acb6eef10200d49c99310f24108313b7},
-  doi = {http://dx.doi.org/10.1016/j.ultramic.2008.07.005}
+  doi = {https://doi.org/10.1016/j.ultramic.2008.07.005}
 }
 </pre></td>
 </tr>
@@ -607,7 +607,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>2011</td>
 	<td>Nano Letters, pp. 111013111159007&nbsp;</td>
 	<td>article</td>
-	<td><a href="http://dx.doi.org/10.1021/nl201813w">DOI</a> <a href="http://pubs.acs.org/doi/abs/10.1021/nl201813w">URL</a>&nbsp;</td>
+	<td><a href="https://doi.org/10.1021/nl201813w">DOI</a> <a href="http://pubs.acs.org/doi/abs/10.1021/nl201813w">URL</a>&nbsp;</td>
 </tr>
 <tr id="bib_cooper_field_2011" class="bibtex noshow">
 <td colspan="6"><b>BibTeX</b>:
@@ -619,7 +619,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
   year = {2011},
   pages = {111013111159007},
   url = {http://pubs.acs.org/doi/abs/10.1021/nl201813w},
-  doi = {http://dx.doi.org/10.1021/nl201813w}
+  doi = {https://doi.org/10.1021/nl201813w}
 }
 </pre></td>
 </tr>
@@ -629,7 +629,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>2008</td>
 	<td>Applied Physics Letters<br/>Vol. 93(11), pp. 112505-3&nbsp;</td>
 	<td>article</td>
-	<td><a href="http://dx.doi.org/10.1063/1.2981574">DOI</a> <a href="http://link.aip.org/link/?APL/93/112505/1">URL</a>&nbsp;</td>
+	<td><a href="https://doi.org/10.1063/1.2981574">DOI</a> <a href="http://link.aip.org/link/?APL/93/112505/1">URL</a>&nbsp;</td>
 </tr>
 <tr id="bib_estrade_cationic_2008" class="bibtex noshow">
 <td colspan="6"><b>BibTeX</b>:
@@ -643,7 +643,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
   number = {11},
   pages = {112505--3},
   url = {http://link.aip.org/link/?APL/93/112505/1},
-  doi = {http://dx.doi.org/10.1063/1.2981574}
+  doi = {https://doi.org/10.1063/1.2981574}
 }
 </pre></td>
 </tr>
@@ -653,7 +653,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>2010</td>
 	<td>Surface Science<br/>Vol. 604(19-20), pp. 1628-1636&nbsp;</td>
 	<td>article</td>
-	<td><a href="http://dx.doi.org/10.1016/j.susc.2010.06.006">DOI</a> <a href="http://www.sciencedirect.com/science/article/B6TVX-509XPNT-3/2/aa36bb3b2b7d94cee13ee35b9d1c39d1">URL</a>&nbsp;</td>
+	<td><a href="https://doi.org/10.1016/j.susc.2010.06.006">DOI</a> <a href="http://www.sciencedirect.com/science/article/B6TVX-509XPNT-3/2/aa36bb3b2b7d94cee13ee35b9d1c39d1">URL</a>&nbsp;</td>
 </tr>
 <tr id="abs_de_la_pena_full_2010" class="abstract noshow">
 	<td colspan="6"><b>Abstract</b>: Fully energy-filtered X-ray photoelectron emission microscopy is used to analyze the spatial distribution of the silicon sub-oxide structure at the SiO2/Si interface as a function of underlying doping pattern. Using a spectroscopic pixel-by-pixel curve fitting analysis, we obtain the sub-oxide binding energy and intensity distributions over the full field of view. Binding energy maps for each oxidation state are obtained with a spatial resolution of 120 nm. Within the framework of a five-layer model, the experimental data are used to obtain quantitative maps of the sub-oxide layer thickness and also their spatial distribution over the p-n junctions. Variations in the sub-oxide thicknesses are found to be linked to the level and type of doping. The procedure, which takes into account instrumental artefacts, enables the quantitative analysis of the full 3D dataset.</td>
@@ -670,7 +670,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
   number = {19-20},
   pages = {1628--1636},
   url = {http://www.sciencedirect.com/science/article/B6TVX-509XPNT-3/2/aa36bb3b2b7d94cee13ee35b9d1c39d1},
-  doi = {http://dx.doi.org/10.1016/j.susc.2010.06.006}
+  doi = {https://doi.org/10.1016/j.susc.2010.06.006}
 }
 </pre></td>
 </tr>
@@ -707,7 +707,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>2010</td>
 	<td>Nanotechnology<br/>Vol. 21(14), pp. 145606&nbsp;</td>
 	<td>article</td>
-	<td><a href="http://dx.doi.org/10.1088/0957-4484/21/14/145606">DOI</a> <a href="http://iopscience.iop.org/0957-4484/21/14/145606/">URL</a>&nbsp;</td>
+	<td><a href="https://doi.org/10.1088/0957-4484/21/14/145606">DOI</a> <a href="http://iopscience.iop.org/0957-4484/21/14/145606/">URL</a>&nbsp;</td>
 </tr>
 <tr id="bib_sanchez_blocking_2010" class="bibtex noshow">
 <td colspan="6"><b>BibTeX</b>:
@@ -721,7 +721,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
   number = {14},
   pages = {145606},
   url = {http://iopscience.iop.org/0957-4484/21/14/145606/},
-  doi = {http://dx.doi.org/10.1088/0957-4484/21/14/145606}
+  doi = {https://doi.org/10.1088/0957-4484/21/14/145606}
 }
 </pre></td>
 </tr>
@@ -731,7 +731,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 	<td>2011</td>
 	<td>Angewandte Chemie International Edition, pp. n/a-n/a&nbsp;</td>
 	<td>article</td>
-	<td><a href="http://dx.doi.org/10.1002/anie.201004502">DOI</a> <a href="http://onlinelibrary.wiley.com/doi/10.1002/anie.201004502/abstract">URL</a>&nbsp;</td>
+	<td><a href="https://doi.org/10.1002/anie.201004502">DOI</a> <a href="http://onlinelibrary.wiley.com/doi/10.1002/anie.201004502/abstract">URL</a>&nbsp;</td>
 </tr>
 <tr id="bib_trasobares_chemical_2011" class="bibtex noshow">
 <td colspan="6"><b>BibTeX</b>:
@@ -743,7 +743,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
   year = {2011},
   pages = {n/a--n/a},
   url = {http://onlinelibrary.wiley.com/doi/10.1002/anie.201004502/abstract},
-  doi = {http://dx.doi.org/10.1002/anie.201004502}
+  doi = {https://doi.org/10.1002/anie.201004502}
 }
 </pre></td>
 </tr>
