--- a/v1.0/citing.html
+++ b/v1.0/citing.html
@@ -183,12 +183,12 @@ entry</p>
   month        = jul,
   year         = 2016,
   doi          = {10.5281/zenodo.58841},
-  url          = {http://dx.doi.org/10.5281/zenodo.58841}
+  url          = {https://doi.org/10.5281/zenodo.58841}
 }
 </pre></div>
 </div>
 <p>or click on the DOI badge below for more citation formats.</p>
-<a class="reference external image-reference" href="http://dx.doi.org/10.5281/zenodo.58841"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.58841.svg" /></a>
+<a class="reference external image-reference" href="https://doi.org/10.5281/zenodo.58841"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.58841.svg" /></a>
 </div>
 
 
