--- a/v1.3/citing.html
+++ b/v1.3/citing.html
@@ -183,7 +183,7 @@
 <p>If HyperSpy has been significant to a project that leads to an academic publication,
 please acknowledge that fact by citing the software. Click on the DOI badge
 below for formatted citation formats.</p>
-<a class="reference external image-reference" href="http://dx.doi.org/10.5281/zenodo.583693"><img alt="https://zenodo.org/badge/doi/10.5281/zenodo.583693.svg" src="https://zenodo.org/badge/doi/10.5281/zenodo.583693.svg" /></a>
+<a class="reference external image-reference" href="https://doi.org/10.5281/zenodo.583693"><img alt="https://zenodo.org/badge/doi/10.5281/zenodo.583693.svg" src="https://zenodo.org/badge/doi/10.5281/zenodo.583693.svg" /></a>
 </div>
 
 
