--- a/v0.8/citing.html
+++ b/v0.8/citing.html
@@ -181,12 +181,12 @@ entry</p>
   month        = jun,
   year         = 2016,
   doi          = {10.5281/zenodo.54004},
-  url          = {http://dx.doi.org/10.5281/zenodo.54004}
+  url          = {https://doi.org/10.5281/zenodo.54004}
 }
 </pre></div>
 </div>
 <p>or click on the DOI badge below for more citation formats.</p>
-<a class="reference external image-reference" href="http://dx.doi.org/10.5281/zenodo.54004"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.54004.svg" /></a>
+<a class="reference external image-reference" href="https://doi.org/10.5281/zenodo.54004"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.54004.svg" /></a>
 </div>
 
 
