Update v2.0 dev documentation

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -698,8 +698,6 @@ document.write(`
 </li>
       <li><a href="reference/api.signals/BaseSignal.html#hyperspy.api.signals.BaseSignal.cluster_analysis">cluster_analysis() (hyperspy.api.signals.BaseSignal method)</a>
 </li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Polynomial.coeffcients">coeffcients (hyperspy.api.model.components1D.Polynomial attribute)</a>
-</li>
       <li><a href="reference/api.samfire/index.html#hyperspy.api.samfire.SamfirePool.collect_results">collect_results() (hyperspy.api.samfire.SamfirePool method)</a>
 </li>
       <li><a href="reference/base_classes/signal/CommonSignal1D.html#hyperspy._signals.common_signal1d.CommonSignal1D">CommonSignal1D (class in hyperspy._signals.common_signal1d)</a>
@@ -870,8 +868,6 @@ document.write(`
 </li>
       <li><a href="reference/api.signals/EELSSpectrum.html#hyperspy.api.signals.EELSSpectrum">EELSSpectrum (class in hyperspy.api.signals)</a>
 </li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.EELSCLEdge.effective_angle">effective_angle (hyperspy.api.model.components1D.EELSCLEdge attribute)</a>
-</li>
       <li><a href="reference/api.eds.html#hyperspy.api.eds.electron_range">electron_range() (in module hyperspy.api.eds)</a>
 </li>
       <li><a href="reference/api.plot/markers.html#hyperspy.api.plot.markers.Ellipse">Ellipse (class in hyperspy.api.plot.markers)</a>
@@ -904,8 +900,6 @@ document.write(`
 </li>
       <li><a href="reference/api.signals/BaseSignal.html#hyperspy.api.signals.BaseSignal.estimate_number_of_clusters">estimate_number_of_clusters() (hyperspy.api.signals.BaseSignal method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Doniach.estimate_parameters">estimate_parameters() (hyperspy.api.model.components1D.Doniach method)</a>
 
       <ul>
@@ -929,7 +923,11 @@ document.write(`
 </li>
         <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.SplitVoigt.estimate_parameters">(hyperspy.api.model.components1D.SplitVoigt method)</a>
 </li>
+        <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Voigt.estimate_parameters">(hyperspy.api.model.components1D.Voigt method)</a>
+</li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="reference/api.signals/Signal1D.html#hyperspy.api.signals.Signal1D.estimate_peak_width">estimate_peak_width() (hyperspy.api.signals.Signal1D method)</a>
 </li>
       <li><a href="reference/api.signals/BaseSignal.html#hyperspy.api.signals.BaseSignal.estimate_poissonian_noise_variance">estimate_poissonian_noise_variance() (hyperspy.api.signals.BaseSignal method)</a>
@@ -1008,12 +1006,6 @@ document.write(`
 </li>
       <li><a href="reference/api.signals/Signal1D.html#hyperspy.api.signals.Signal1D.find_peaks1D_ohaver">find_peaks1D_ohaver() (hyperspy.api.signals.Signal1D method)</a>
 </li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.EELSCLEdge.fine_structure_active">fine_structure_active (hyperspy.api.model.components1D.EELSCLEdge attribute)</a>
-</li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.EELSCLEdge.fine_structure_coeff">fine_structure_coeff (hyperspy.api.model.components1D.EELSCLEdge attribute)</a>
-</li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.EELSCLEdge.fine_structure_smoothing">fine_structure_smoothing (hyperspy.api.model.components1D.EELSCLEdge attribute)</a>
-</li>
       <li><a href="reference/base_classes/model/basemodel.html#hyperspy.model.BaseModel.fit">fit() (hyperspy.model.BaseModel method)</a>
 
       <ul>
@@ -1040,10 +1032,10 @@ document.write(`
 </li>
       <li><a href="reference/base_classes/model/eelsmodel.html#hyperspy.models.edsmodel.EDSModel.fix_sub_xray_lines_weight">fix_sub_xray_lines_weight() (hyperspy.models.edsmodel.EDSModel method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="reference/base_classes/model/eelsmodel.html#hyperspy.models.edsmodel.EDSModel.fix_xray_lines_energy">fix_xray_lines_energy() (hyperspy.models.edsmodel.EDSModel method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="reference/base_classes/model/eelsmodel.html#hyperspy.models.edsmodel.EDSModel.fix_xray_lines_width">fix_xray_lines_width() (hyperspy.models.edsmodel.EDSModel method)</a>
 </li>
       <li><a href="reference/api.signals/BaseSignal.html#hyperspy.api.signals.BaseSignal.fold">fold() (hyperspy.api.signals.BaseSignal method)</a>
@@ -1078,8 +1070,6 @@ document.write(`
         <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Offset.function_nd">(hyperspy.api.model.components1D.Offset method)</a>
 </li>
         <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.PESCoreLineShape.function_nd">(hyperspy.api.model.components1D.PESCoreLineShape method)</a>
-</li>
-        <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Polynomial.function_nd">(hyperspy.api.model.components1D.Polynomial method)</a>
 </li>
         <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.ScalableFixedPattern.function_nd">(hyperspy.api.model.components1D.ScalableFixedPattern method)</a>
 </li>
@@ -1193,8 +1183,6 @@ document.write(`
       <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Bleasdale.grad_b">grad_b() (hyperspy.api.model.components1D.Bleasdale method)</a>
 </li>
       <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Bleasdale.grad_c">grad_c() (hyperspy.api.model.components1D.Bleasdale method)</a>
-</li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Polynomial.grad_one_coefficient">grad_one_coefficient() (hyperspy.api.model.components1D.Polynomial method)</a>
 </li>
       <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.SEE.grad_Phi">grad_Phi() (hyperspy.api.model.components1D.SEE method)</a>
 </li>
@@ -1444,8 +1432,6 @@ document.write(`
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.EELSCLEdge.intensity">intensity (hyperspy.api.model.components1D.EELSCLEdge attribute)</a>
-</li>
       <li><a href="reference/api.html#hyperspy.api.interactive">interactive() (in module hyperspy.api)</a>
 </li>
       <li><a href="reference/api.signals/Signal1D.html#hyperspy.api.signals.Signal1D.interpolate_in_between">interpolate_in_between() (hyperspy.api.signals.Signal1D method)</a>
@@ -1659,11 +1645,9 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="reference/api.datasets/example_signals.html#hyperspy.api.datasets.example_signals.object_hologram">object_hologram() (in module hyperspy.api.datasets.example_signals)</a>
 </li>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Offset">Offset (class in hyperspy.api.model.components1D)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.EELSCLEdge.onset_energy">onset_energy (hyperspy.api.model.components1D.EELSCLEdge attribute)</a>
+      <li><a href="reference/api.model/components1D.html#hyperspy.api.model.components1D.Offset">Offset (class in hyperspy.api.model.components1D)</a>
 </li>
       <li><a href="reference/api.signals/BaseSignal.html#hyperspy.api.signals.BaseSignal.original_metadata">original_metadata (hyperspy.api.signals.BaseSignal property)</a>
 </li>
